--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Front-end Challenge",
   "main": "index.js",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/ahmadkarimi1991/frontend-challenge#readme",
   "devDependencies": {
+    "css-loader": "^5.2.6",
+    "html-webpack-plugin": "^5.3.2",
+    "sass": "^1.35.2",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.0.0",
     "webpack": "^5.43.0",
     "webpack-cli": "^4.7.2"
   }
