--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Front-end Challenge",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config webpack.config.js"
+    "start": "webpack --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "serve": "webpack serve --open --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,8 @@
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
     "webpack": "^5.43.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
   }
 }
